@@ -5,6 +5,8 @@ Release 5.2.2 (unreleased)
 Bug fixes
 ---------
 
+- Mesh extrusion: various robustness improvements.
+
 - GUI reader: fix for cases with multiple mapped inlets.
 
 - Work around possible Intel icc compiler bug in least-squares vector
